Notes/CSS/Main.css
@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Cantata+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@1,500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');


/* header */

.header{
    position: fixed;
    text-align: center;
    top: 0;
    left: 0;
    width: 100%;
    height: 100px;
    background-color: black;
}

.notelogo{
    vertical-align: middle;
    font-size: 40px;
    color: white;
    font-family: 'Lobster', cursive;
    text-shadow: black .05em .05em 0,
                 white .08em .08em 0;
}

/*note*/
.notes {
  display: flex;
  position: fixed;
  top: 100px;
  height: 100%;
}

.notes * {
  font-family: sans-serif;
}

.notes__sidebar {
  border-right: 2px solid #000000;
  flex-shrink: 0;
  overflow-y: auto;
  padding: 1em;
  width: 300px;
}

.notes__add {
  background: #119500;
  border: none;
  border-radius: 7px;
  color: #ffffff;
  cursor: pointer;
  font-size: 1.25em;
  font-weight: bold;
  margin-bottom: 1em;
  padding: 0.75em 0;
  width: 100%;
}

.notes__add:hover {
  background: #225500;
}

.notes__list-item {
  cursor: pointer;
}

.notes__list-item--selected {
  background: #eeeeee;
  border-radius: 7px;
  font-weight: bold;
}

.notes__small-title,
.notes__small-updated {
  padding: 10px;
}

.notes__small-title {
  font-size: 1.2em;
}

.notes__small-body {
  padding: 0 10px;
}

.notes__small-updated {
  color: #464646;
  font-style: italic;
  text-align: right;
}

.notes__preview {
  display: flex;
  flex-direction: column;
  padding: 2em 3em;
  flex-grow: 1;
}

.notes__title,
.notes__body {
  border: none;
  outline: none;
  width: 100%;
}

.notes__title {
  font-size: 3em;
  font-weight: bold;
}

.notes__body {
  flex-grow: 1;
  font-size: 1.2em;
  line-height: 1.5;
  margin-top: 2em;
  resize: none;
}



/* footer */

.footer{
  position: fixed;
  left: 0;
  bottom: 0;
  background-color: black;
  height: 100px;
  width: 100%;
  clear: both;
}

#wrap
{
	width: 100%;
	height: 100%;
	position: relative;
	margin: 0 auto 0 auto;
	overflow: hidden;
}

#lightings
{
	bottom: -60px;
	position: absolute;
	width: 100%;
}

section
{
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	border-radius: 50%;
	height: 20px;
	width: 100%;
	position: relative;
	margin: auto;

}

#one
{
	-webkit-animation: one 5s ease-in-out infinite alternate;
	-moz-animation: one 5s ease-in-out infinite alternate;
	-ms-animation: one 5s ease-in-out infinite alternate;
	-o-animation: one 5s ease-in-out infinite alternate;
	animation: one 5s ease-in-out infinite alternate;
}
@-webkit-keyframes 
one { from {
-webkit-box-shadow: 0 0 250px 20px #473C78;
}

to { -webkit-box-shadow: 0 0 100px 15px #F72A3B; }
}
@-moz-keyframes 
one { from {
-moz-box-shadow: 0 0 250px 20px #473C78;
}

to { -moz-box-shadow: 0 0 100px 15px #F72A3B; }
}
@-o-keyframes 
one { from {
-o-box-shadow: 0 0 250px 20px #473C78;
}

to { -o-box-shadow: 0 0 100px 15px #F72A3B; }
}

@keyframes 
one { from {
box-shadow: 0 0 250px 20px #473C78;
}

to {box-shadow: 0 0 100px 15px #F72A3B; }
}

#two
{
	width: 90%;
	-webkit-animation: two 4s ease-in-out infinite alternate;
	-moz-animation: two 4s ease-in-out infinite alternate;
	-ms-animation: two 4s ease-in-out infinite alternate;
	-o-animation: two 4s ease-in-out infinite alternate;
	animation: two 4s ease-in-out infinite alternate;
}
@-webkit-keyframes 
two { from {
-webkit-box-shadow: 0 0 250px 20px #18C499;
}

to { -webkit-box-shadow: 0 0 100px 15px #D8F05E; }
}
@-moz-keyframes 
two { from {
-moz-box-shadow: 0 0 250px 20px #18C499;
}

to { -moz-box-shadow: 0 0 100px 15px #D8F05E; }
}
@-o-keyframes 
two { from {
-o-box-shadow: 0 0 250px 20px #18C499;
}

to { -o-box-shadow: 0 0 100px 15px #D8F05E; }
}

@keyframes 
two { from {
box-shadow: 0 0 250px 20px #18C499;
}

to { box-shadow: 0 0 100px 15px #D8F05E; }
}

#three
{
	width: 80%;
	-webkit-animation: three 3s ease-in-out infinite alternate;
	-moz-animation: three 3s ease-in-out infinite alternate;
	-ms-animation: three 3s ease-in-out infinite alternate;
	-o-animation: three 3s ease-in-out infinite alternate;
	animation: three 3s ease-in-out infinite alternate;
}
@-webkit-keyframes 
three { from {
-webkit-box-shadow: 0 0 250px 20px #FFDD00;
}

to { -webkit-box-shadow: 0 0 100px 15px #3E33FF; }
}
@-moz-keyframes 
three { from {
-moz-box-shadow: 0 0 250px 20px #FFDD00;
}

to { -moz-box-shadow: 0 0 100px 15px #3E33FF }
}
@-o-keyframes 
three { from {
-o-box-shadow: 0 0 250px 20px #FFDD00;
}

to { -o-box-shadow: 0 0 100px 15px #3E33FF }
}

@keyframes 
three { from {
box-shadow: 0 0 250px 20px #FFDD00;
}

to { box-shadow: 0 0 100px 15px #3E33FF }
}

#four
{
	width: 70%;
	-webkit-animation: four 2s ease-in-out infinite alternate;
	-moz-animation: four 2s ease-in-out infinite alternate;
	-ms-animation: four 2s ease-in-out infinite alternate;
	-o-animation: four 2s ease-in-out infinite alternate;
	animation: four 2s ease-in-out infinite alternate;
}
@-webkit-keyframes 
four { from {
-webkit-box-shadow: 0 0 250px 20px #781848;
}

to { -webkit-box-shadow: 0 0 100px 15px #F2BBE9; }
}
@-moz-keyframes 
four { from {
-moz-box-shadow: 0 0 250px 20px #781848;
}

to { -moz-box-shadow: 0 0 100px 15px #F2BBE9; }
}
@-o-keyframes 
four { from {
-o-box-shadow: 0 0 250px 20px #781848;
}

to { -o-box-shadow: 0 0 100px 15px #F2BBE9; }
}

@keyframes 
four { from {
shadow: 0 0 250px 20px #781848;
}

to { shadow: 0 0 100px 15px #F2BBE9; }
}

#five
{
	width: 60%;
	-webkit-animation: five 1s ease-in-out infinite alternate;
	-moz-animation: five 1s ease-in-out infinite alternate;
	-ms-animation: five 1s ease-in-out infinite alternate;
	-o-animation: five 1s ease-in-out infinite alternate;
	animation: five 1s ease-in-out infinite alternate;
}
@-webkit-keyframes 
five { from {
-webkit-box-shadow: 0 0 250px 20px #42F2A1;
}

to { -webkit-box-shadow: 0 0 100px 15px #F4F6AD; }
}
@-moz-keyframes 
five { from {
-moz-box-shadow: 0 0 250px 20px #42F2A1;
}

to { -moz-box-shadow: 0 0 100px 15px #F4F6AD; }
}
@-o-keyframes 
five { from {
-o-box-shadow: 0 0 250px 20px #42F2A1;
}

to { -o-box-shadow: 0 0 100px 15px #F4F6AD; }
}

@keyframes 
five { from {
box-shadow: 0 0 250px 20px #42F2A1;
}

to { box-shadow: 0 0 100px 15px #F4F6AD; }
}

.textfooter{
  position: fixed;
  left: 50px;
  bottom: 20px;
  text-align: justify;
}

.textfooter2{
  position: fixed;
  right: 50px;
  bottom: 20px;
  text-align: justify;
}

.textft{
  color: white;
  font-family: 'Josefin Slab', serif;
}

.link{
  color: white;
}

